feature: add base post info
