# src/models/PostInfo.js
@@ -1,14 +1,18 @@
 import { Schema, model } from 'mongoose';
 import { VOTE } from '@/config/constants';
 
-const PostVote = new Schema({
+const PostInfo = new Schema({
   post: { type: Schema.Types.ObjectId, ref: 'post', required: true },
   user: { type: Schema.Types.ObjectId, ref: 'user', required: true },
   voteType: {
     type: Number,
     enum: Object.values(VOTE),
-    default: 1,
+    default: VOTE.NO_VOTE,
+  },
+  mark: {
+    type: Boolean,
+    default: true,
   },
 });
 
-export default model('postVote', PostVote);
+export default model('postInfo', PostInfo);
